fix branch overlap

--- a/app/assets/stylesheets/professionals.scss
+++ b/app/assets/stylesheets/professionals.scss
@@ -1,11 +1,9 @@
 .all-pros{
+	margin: 5em 0 5em 0;
 	margin: auto;
 	margin-top: 5em;
 	margin-bottom: 5em;
-<<<<<<< HEAD
 	text-align: center;
-=======
->>>>>>> search
 }
 .professional-profile{
 	margin-top: 7em;
